<resources>
    <string name="app_name">Atena</string>
    <string name="no_overloads_no_downtime_24_7_live_n_support">No overloads.No downtime. 24/7live \n support</string>
    <string name="next_level_trading">Next Level Trading</string>
    <string name="pl"><![CDATA[P&L]]>%</string>
    <string name="size">Long</string>
    <string name="entry_price">Entry Price $</string>
    <string name="current_price">Current Price $</string>
    <string name="take_profit_stop_loss">Take Profit/Stop Loss</string>
    <string name="percent">Percent</string>
    <string name="filusdt">FILUSDT</string>
    <string name="save">Save</string>
    <string name="show">Show Trade</string>
    <string name="no_overloads_no_downtime_24_7_live">No overLoads.No downtime.24/7 live</string>
    <string name="support">support</string>
    <string name="set_text_for_field">SET TEXT FOR FIELD</string>
    <string name="enter_text">ENTER TEXT</string>
    <string name="last_price">Last Price</string>
</resources>