<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Please Fill all item's"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/percent"
                android:inputType="numberDecimal"
                android:text="@={viewModel.percent}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/filusdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/filusdt"
                android:text="@={viewModel.filusdt}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/pl"
                android:text="@={viewModel.pl}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/size"
                android:text="@={viewModel.size}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/entry_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/entry_price"
                android:inputType="numberDecimal"
                android:text="@={viewModel.entryPrice}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/current_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/current_price"
                android:inputType="numberDecimal"
                android:text="@={viewModel.currentPrice}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:counterOverflowTextAppearance="@style/counterOverride"
            app:counterTextAppearance="@style/counterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/white">

            <EditText
                tools:text="@string/take_profit_stop_loss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:hint="@string/take_profit_stop_loss"
                android:text="@={viewModel.takeProfit}"
                android:textColor="@color/yellow" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPic1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginStart="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:background="@drawable/pic1"
                android:checked="true"
                android:gravity="bottom"
                android:onClick="onRadioButtonClicked" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/yellow" />


            <RadioButton
                android:id="@+id/radioPic2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginStart="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:background="@drawable/pic2"
                android:gravity="bottom"
                android:onClick="onRadioButtonClicked" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@color/yellow" />

            <RadioButton
                android:id="@+id/radioPic3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginStart="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:background="@drawable/pic3"
                android:gravity="bottom"
                android:onClick="onRadioButtonClicked" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@color/yellow" />


            <RadioButton
                android:id="@+id/radioPic4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginStart="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:background="@drawable/pic4"
                android:gravity="bottom"
                android:onClick="onRadioButtonClicked" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:background="@color/yellow" />

            <RadioButton
                android:id="@+id/radioPic5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_marginStart="-5dp"
                android:layout_marginBottom="-5dp"
                android:layout_weight="1"
                android:background="@drawable/pic5"
                android:gravity="bottom"
                android:onClick="onRadioButtonClicked" />
        </RadioGroup>

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/yellow"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="@{viewModel::goHomeActivity}"
            android:text="@string/save">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="7dp"
                android:text="@string/show"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>