<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.khz.atena.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="@dimen/_15sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#25262B">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tvPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semi_regular"
                        android:gravity="center"
                        android:onClick="@{viewModel::setTextField}"
                        android:padding="@dimen/_5sdp"
                        android:textColor="#1DB15D"
                        android:textSize="45sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="75.49 " />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:src="@drawable/percent"
                        app:layout_constraintBottom_toBottomOf="@+id/tvPercent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvPercent"
                        app:layout_constraintTop_toTopOf="@+id/tvPercent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutTop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="@+id/cardImage"
                    app:layout_constraintStart_toStartOf="@+id/cardImage"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPercent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/semi_medium"
                        android:onClick="@{viewModel::setTextField}"
                        android:textColor="#E0E1E6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="FILUSDT" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semi_medium"
                        android:gravity="center"
                        android:onClick="@{viewModel::setTextField}"
                        android:textColor="#E0E1E6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/pl" />

                    <TextView
                        android:id="@+id/tvSizeStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:fontFamily="@font/semi_medium"
                        android:gravity="center"
                        android:onClick="@{viewModel::setTextField}"
                        android:textColor="#FF4E4E"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="Small" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardImage"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:cardBackgroundColor="#25262B"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutTop">

                    <ImageView
                        android:id="@+id/picHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="chooseImage"
                        android:scaleType="fitXY"
                        android:src="@drawable/pic1" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutCenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/cardImage"
                    app:layout_constraintStart_toStartOf="@+id/cardImage"
                    app:layout_constraintTop_toBottomOf="@+id/cardImage">

                    <TextView
                        android:id="@+id/tvFilusdt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semi_regular"
                        android:text="@string/entry_price"
                        android:textColor="#B3B4B9"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/semi_medium"
                        android:onClick="@{viewModel::setTextField}"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvFilusdt"
                        app:layout_constraintTop_toBottomOf="@+id/tvFilusdt"
                        android:text="82.95" />

                    <TextView
                        android:id="@+id/tvPL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:fontFamily="@font/semi_medium"
                        android:gravity="center"
                        android:text="@string/current_price"
                        android:textColor="#B3B4B9"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toStartOf="@+id/tvSize"
                        app:layout_constraintStart_toEndOf="@+id/tvFilusdt"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/semi_regular"
                        android:gravity="center"
                        android:onClick="@{viewModel::setTextField}"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="@+id/tvPL"
                        app:layout_constraintTop_toBottomOf="@+id/tvPL"
                        android:text="85.50" />

                    <TextView
                        android:id="@+id/tvSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/semi_medium"
                        android:gravity="center"
                        android:text="@string/take_profit_stop_loss"
                        android:textColor="#B3B4B9"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/semi_regular"
                        android:gravity="center"
                        android:onClick="@{viewModel::setTextField}"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="@+id/tvSize"
                        app:layout_constraintTop_toBottomOf="@+id/tvSize"
                        android:text="0.00/82.60" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutBottom"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layoutCenter">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        app:cardCornerRadius="@dimen/_10sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/barcode" />
                    </androidx.cardview.widget.CardView>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_medium"
                            android:text="@string/next_level_trading"
                            android:textColor="@color/black"
                            android:textSize="21sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_medium"
                            android:text="@string/no_overloads_no_downtime_24_7_live"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/semi_medium"
                            android:text="@string/support"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_6sdp"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/logo_footer" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/_3sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="@+id/imageView3">

                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_margin="@dimen/_3sdp"
                            android:src="@drawable/ic_logo_black" />
                    </androidx.cardview.widget.CardView>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>